BICA-31 * Configurable feature (default off) in ere-ps-app that we are sending the VSDMResponse to the cardlink Websocket